Murphy System/outputs/workspace_output_1769719099_2382.txt
  File "/workspace/murphy_complete_integrated.py", line 1058
    &quot;&quot;&quot;
    ^
SyntaxError: invalid syntax
